# mountos-gui

./: .gitignore  DESIGN.md  Makefile  PRODUCT.md  README.md  index.html  lefthook.yml  package-lock.json  package.json  tsconfig.json  vite.config.ts
.impeccable/: config.json
LICENSES/: js.json  rust.json
scripts/: bump-version.sh  generate-licenses.mjs  generate-licenses.sh
src/: App.svelte  TrayPopover.svelte  app.css  main.ts
src-tauri/: Cargo.toml  about.toml  tauri.conf.json
src-tauri/.impeccable/: hook.cache.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: actions.ts  app-state.svelte.ts  cli.test.ts  cli.ts  health.ts  tauri.ts  theme.svelte.ts  theme.ts  themes.ts  tips.ts  toast.svelte.ts  types.ts  utils.ts
src/lib/components/: Callout.svelte  CliErrorOutput.svelte  CommandPalette.svelte  CommandPreview.svelte  ConfigSection.svelte  ForkManagementPanel.svelte  GatewayLaunchesPanel.svelte  InstanceConfigPanel.svelte  Toaster.svelte
src/lib/components/dialogs/: DeleteProfileDialog.svelte  DeletedViewDialog.svelte  ExternalDeletedViewDialog.svelte  ExternalVersionViewDialog.svelte  ForkCreateDialog.svelte  ForkDeleteDialog.svelte  ForkRestoreDialog.svelte  GatewayDialog.svelte  SecretPromptDialog.svelte  SnapshotDialog.svelte  StopGatewayDialog.svelte  ThirdPartyLicensesDialog.svelte  TipsDialog.svelte  UnmountDialog.svelte  VersionViewDialog.svelte
src/lib/components/shared/: DateTimePicker.svelte  InfoTip.svelte
src/lib/components/views/: DeletedView.svelte  (+7 more)
src/lib/styles/: corner-brackets.css  toast.css
(+48 files in other folders)
