[package]
name = "mountos-desktop"
version = "0.1.0"
description = "mountOS Desktop"
authors = ["mountOS"]
license = "Apache-2.0"
repository = ""
edition = "2021"

[lib]
name = "mountos_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native"] }
open = "5.3.3"
regex = "1.12.3"
tauri = { version = "2.11.5", features = ["tray-icon", "image-png"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
thiserror = "2.0.17"
which = "8.0.4"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSResponder"] }
